--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,11 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"></activity>
         <activity
+            android:name="com.oovoo.sdk.sample.chating_files.MainActivity_chat2"
+            android:exported="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"></activity>
+        <activity
             android:name="com.oovoo.sdk.sample.signup"
             android:icon="@drawable/ic_launcher"
             android:label="@string/title_activity_signup"
